    for testing purposes: residuals_overall_exp.plm always gives the residuals of the
    overall/outer plm model, fitted_exp.plm gives the fitted values (by subtracting
    the overall residuals from the untransformed response variable).
  * pwartest.formula (only formula interface): fixed: ellipsis ("dots") was not passed on.
  * print.pseries: prettier printing for integers.
  * summary.pseries: better handling of characters, logicals, factors (use base methods).
  * purtest: cosmetic: when argument 'lags' is not specified by user, the returned
             object does not contain all three possible values in args$lags anymore,
             thus prints prettier.
  * summary.piest: heading now has "z-value" and "Pr(>|z|)" as the numbers are based
                   on the standard normal distribution.
  * cosmetic: some print functions now have better aligned whitespacing.
  * Dependencies: 'car' moved from 'Imports' to 'Suggests'.


Changes in version 1.6-5

  * pFtest: disable input model check due to reverse dependency of package AER
    (and to allow arbitrary model comparisons); check was erroneously enabled in
    plm version 1.6-4.


Changes in version 1.6-4

  * Argument for supplying a variance-covariance matrix is now consistently named 'vcov'
    across all functions. The old argument '.vcov' of summary.plm is marked as deprecated.
    Deprecation warnings are only issued for those functions which where on CRAN with
    the now deprecated argument '.vcov' (i.e., just for summary.plm, no warnings for
    functions pwaldtest, fixef, within_intercept).
  * Snesp.Rd, LaborSupply.Rd: broken links fixed.
  * Vignette: updated contact details.


Changes in version 1.6-3

  * Function Ftest renamed to pwaldtest (there was never a CRAN release with Ftest
    exported, thus no deprecation warning).
  * summary.plm: F statistic uses adjusted df2 parameter in case of robust vcov.


Changes in version 1.6-2
